--- a/public/style.css
+++ b/public/style.css
@@ -87,7 +87,7 @@ h3 {
 .bg {
   background-image: url(img/bg-etiqueta%20.png);
   max-width: 100%;
-  height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
 }
